add social handle links

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,8 +28,24 @@
     <div class="d-flex-sm">
       <span class="col-red font-normal work-line">See my works</span>
       <span><hr class="half-hr"></span>
-      <span>1234</span>
+      <div class="d-flex">
+        <a href="https://stackoverflow.com/users/14947986/hamayun-waheed" target="_blank" class="col-white"><i class="fab fa-stack-overflow"></i></a>
+        <a href="https://github.com/hamayun-cpu" target="_blank" class="col-white"><i class="fab fa-github"></i></a>
+        <a href="https://twitter.com/hamayun_waheed" target="_blank" class="col-white"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/hamayun-waheed/" target="_blank" class="col-white"><i class="fab fa-linkedin"></i></a>
+      </div>
     </div>
+  </div>
+
+  <div class="container-1">
+    <div>
+      <p class="number-1 col-white m-0 font-normal">02</p>
+      <p class="col-white m-0">My Recent works</p>
+    </div>
+    <h1 class="name-container col-white m-0 font-normal">
+      Portfolio
+    </h1>
+    
   </div>
 </body>
 </html>
