--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
     <h1 class="name-container col-white m-0 font-normal">
       Portfolio
     </h1>
-    
   </div>
+
+  <div class="bg-pic-1">
+    <p class="col-white m-0 font-normal project-title ">Cricket Opinions</p>
+  </div>
+
 </body>
 </html>
