fix line before social handle links

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </p>
     <div class="d-flex-sm">
       <span class="col-red font-normal work-line">See my works</span>
-      <span><hr class="half-hr"></span>
+      <span><hr class="half-hr col-white"></span>
       <div class="d-flex">
         <a href="https://stackoverflow.com/users/14947986/hamayun-waheed" target="_blank" class="col-white"><i class="fab fa-stack-overflow"></i></a>
         <a href="https://github.com/hamayun-cpu" target="_blank" class="col-white"><i class="fab fa-github"></i></a>
