add content of portfolio

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </div>
 
-  <div class="container-1">
+  <div class="container-1 mt-30">
     <div>
       <p class="number-1 col-white m-0 font-normal">02</p>
       <p class="col-white m-0">My Recent works</p>
@@ -48,7 +48,14 @@
   </div>
 
   <div class="bg-pic-1">
-    <p class="col-white m-0 font-normal project-title ">Cricket Opinions</p>
+    <div class = "lin-bg pad-5">
+      <p class="col-white m-0 font-normal project-title ">Cricket Opinions</p>
+      <div class="d-flex mt-5 w-80">
+        <div class="tech-box font-normal col-white pad-2">HTML/CSS</div>
+        <div class="tech-box font-normal col-white pad-2">Ruby on Rails</div>
+        <div class="tech-box font-normal col-white pad-2">JavaScript</div>
+      </div>
+    </div>
   </div>
 
 </body>
