add button to portfolio page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <div class="tech-box font-normal col-white pad-2">Ruby on Rails</div>
         <div class="tech-box font-normal col-white pad-2">JavaScript</div>
       </div>
+      <div class="see-proj">
+        <a href="#" target="_blank" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+      </div>
     </div>
   </div>
 
