add all projects

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="d-flex-sm">
       <span class="col-red font-normal work-line">See my works</span>
       <span><hr class="half-hr"></span>
-      <div class="d-flex">
+      <div class="d-flex pr-5 ">
         <a href="https://stackoverflow.com/users/14947986/hamayun-waheed" target="_blank" class="col-white"><i class="fab fa-stack-overflow"></i></a>
         <a href="https://github.com/hamayun-cpu" target="_blank" class="col-white"><i class="fab fa-github"></i></a>
         <a href="https://twitter.com/hamayun_waheed" target="_blank" class="col-white"><i class="fab fa-twitter"></i></a>
@@ -47,13 +47,66 @@
     </h1>
   </div>
 
+  <div class="bg-pic-3">
+    <div class = "lin-bg">
+      <p class="col-white m-0 font-normal project-title ">Social Friends</p>
+      <div class="d-flex mt-5 w-80">
+        <div class="tech-box font-normal col-white pad-2">HTML/CSS</div>
+        <div class="tech-box font-normal col-white pad-2">Ruby on Rails</div>
+        <div class="tech-box font-normal col-white pad-2">Bootstrap</div>
+      </div>
+      <div class="see-proj">
+        <a href="#" target="_blank" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+      </div>
+    </div>
+  </div>
+
   <div class="bg-pic-1">
-    <div class = "lin-bg pad-5">
+    <div class = "lin-bg">
       <p class="col-white m-0 font-normal project-title ">Cricket Opinions</p>
       <div class="d-flex mt-5 w-80">
         <div class="tech-box font-normal col-white pad-2">HTML/CSS</div>
         <div class="tech-box font-normal col-white pad-2">Ruby on Rails</div>
-        <div class="tech-box font-normal col-white pad-2">JavaScript</div>
+        <div class="tech-box font-normal col-white pad-2">Bootstrap</div>
+      </div>
+      <div class="see-proj">
+        <a href="#" target="_blank" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+      </div>
+    </div>
+  </div>
+
+  <div class="bg-pic-2">
+    <div class = "lin-bg">
+      <p class="col-white m-0 font-normal project-title ">Twitter Clone</p>
+      <div class="d-flex mt-5 w-80">
+        <div class="tech-box font-normal col-white pad-2">HTML/CSS</div>
+        <div class="tech-box font-normal col-white pad-2">Ruby on Rails</div>
+        <div class="tech-box font-normal col-white pad-2">Bulma</div>
+      </div>
+      <div class="see-proj">
+        <a href="#" target="_blank" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+      </div>
+    </div>
+  </div>
+
+  <div class="bg-pic-4">
+    <div class = "lin-bg">
+      <p class="col-white m-0 font-normal project-title ">NewsWeek Clone</p>
+      <div class="d-flex mt-5 w-80">
+        <div class="tech-box font-normal col-white pad-2">HTML/CSS</div>
+        <div class="tech-box font-normal col-white pad-2">Bootstrap</div>
+      </div>
+      <div class="see-proj">
+        <a href="#" target="_blank" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+      </div>
+    </div>
+  </div>
+
+  <div class="bg-pic-5">
+    <div class = "lin-bg">
+      <p class="col-white m-0 font-normal project-title ">The Next Web Clone</p>
+      <div class="d-flex mt-5 w-80">
+        <div class="tech-box font-normal col-white pad-2">HTML/CSS</div>
       </div>
       <div class="see-proj">
         <a href="#" target="_blank" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
