add some space between project cards

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
   </div>
 
-  <div class="bg-pic-1">
+  <div class="bg-pic-1 mt-5">
     <div class = "lin-bg">
       <p class="col-white m-0 font-normal project-title ">Cricket Opinions</p>
       <div class="d-flex mt-5 w-80">
@@ -75,7 +75,7 @@
     </div>
   </div>
 
-  <div class="bg-pic-2">
+  <div class="bg-pic-2 mt-5">
     <div class = "lin-bg">
       <p class="col-white m-0 font-normal project-title ">Twitter Clone</p>
       <div class="d-flex mt-5 w-80">
@@ -89,7 +89,7 @@
     </div>
   </div>
 
-  <div class="bg-pic-4">
+  <div class="bg-pic-4 mt-5">
     <div class = "lin-bg">
       <p class="col-white m-0 font-normal project-title ">NewsWeek Clone</p>
       <div class="d-flex mt-5 w-80">
@@ -102,7 +102,7 @@
     </div>
   </div>
 
-  <div class="bg-pic-5">
+  <div class="bg-pic-5 mt-5">
     <div class = "lin-bg">
       <p class="col-white m-0 font-normal project-title ">The Next Web Clone</p>
       <div class="d-flex mt-5 w-80">
