add show page for project 1

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="tech-box font-normal col-white pad-2">Bootstrap</div>
       </div>
       <div class="see-proj">
-        <a href="#" target="_blank" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+        <a href="./project1.html" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
       </div>
     </div>
   </div>
@@ -70,7 +70,7 @@
         <div class="tech-box font-normal col-white pad-2">Bootstrap</div>
       </div>
       <div class="see-proj">
-        <a href="#" target="_blank" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+        <a href="#" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
       </div>
     </div>
   </div>
@@ -84,7 +84,7 @@
         <div class="tech-box font-normal col-white pad-2">Bulma</div>
       </div>
       <div class="see-proj">
-        <a href="#" target="_blank" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+        <a href="#" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
       </div>
     </div>
   </div>
@@ -97,7 +97,7 @@
         <div class="tech-box font-normal col-white pad-2">Bootstrap</div>
       </div>
       <div class="see-proj">
-        <a href="#" target="_blank" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+        <a href="#" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
       </div>
     </div>
   </div>
@@ -109,7 +109,7 @@
         <div class="tech-box font-normal col-white pad-2">HTML/CSS</div>
       </div>
       <div class="see-proj">
-        <a href="#" target="_blank" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+        <a href="#" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
       </div>
     </div>
   </div>
