add page for project 2

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="tech-box font-normal col-white pad-2">Bootstrap</div>
       </div>
       <div class="see-proj">
-        <a href="#" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+        <a href="./project2.html" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
       </div>
     </div>
   </div>
