--- a/project2.html
+++ b/project2.html
@@ -18,22 +18,22 @@
   </div>
   <div class="col-white m-auto w-90">
     <div class="title">
-      Social Friends
+      Cricket Opinions
     </div>
     <div class="d-flex just-cont-sp-btw mt-5 w-90 max-w">
       <div class="tech-box col-white pad-2">HTML/CSS</div>
       <div class="tech-box col-white pad-2">Ruby on Rails</div>
-      <div class="tech-box col-white pad-2">Bulma</div>
+      <div class="tech-box col-white pad-2">Bootstrap</div>
     </div>
     <div class="mt-5">
-      <img src="./images/ss-1.png" class="image-box ">
+      <img src="./images/co-1.png" class="image-box ">
     </div>
     <div class="pad-5 mt-5">
-      This project is a Social-Media-App. In which a user if not SignedIn, can SignIn or SignUp. If User is SignedIn he can create posts and can comment and like/dislike other's posts. He can also send friendship request to other users, and that user can accept or decline the request. A SignedIn user will have Timeline page where he can see all the posts posted by him and his friends.
+      This project is a Social-Media-App. In which a user if not SignedIn, can SignIn or SignUp. If User is SignedIn he can create posts. He can also Follow other users. A SignedIn user will have Timeline page where he can see all the posts posted by him and the users he follows. He will also upload a profile picture and cover picture if he wants to.
     </div>
     <div class="ml-2 mb-10">
-      <a href="https://morning-harbor-22051.herokuapp.com/" target="_blank" class="col-red no-decor ">See live <i class="fas fa-external-link-alt ml-2"></i> </a> <br>
-      <a href="https://github.com/hamayun-cpu/Soacial-friends/tree/master" target="_blank" class="col-red no-decor">See source <i class="fab fa-github ml-2"></i> </a>
+      <a href="https://fierce-wildwood-74025.herokuapp.com/" target="_blank" class="col-red no-decor ">See live <i class="fas fa-external-link-alt ml-2"></i> </a> <br>
+      <a href="https://github.com/hamayun-cpu/Cricket-Opinions/tree/main" target="_blank" class="col-red no-decor">See source <i class="fab fa-github ml-2"></i> </a>
     </div>
   </div>
 </body>
