add page for project 3,4 and 5

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="tech-box font-normal col-white pad-2">Bulma</div>
       </div>
       <div class="see-proj">
-        <a href="#" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+        <a href="./project3.html" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
       </div>
     </div>
   </div>
@@ -97,7 +97,7 @@
         <div class="tech-box font-normal col-white pad-2">Bootstrap</div>
       </div>
       <div class="see-proj">
-        <a href="#" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+        <a href="./project4.html" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
       </div>
     </div>
   </div>
@@ -109,7 +109,7 @@
         <div class="tech-box font-normal col-white pad-2">HTML/CSS</div>
       </div>
       <div class="see-proj">
-        <a href="#" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+        <a href="./project5.html" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
       </div>
     </div>
   </div>
