add all sections for skills and form for a message

--- a/index.html
+++ b/index.html
@@ -114,5 +114,204 @@
     </div>
   </div>
 
+  <div class="container-1 mt-30">
+    <div>
+      <p class="number-1 col-white m-0 font-normal">03</p>
+      <p class="col-white m-0">Some words</p>
+    </div>
+    <h1 class="name-container col-white m-0 font-normal">
+      About me
+    </h1>
+    <p class="description font-normal col-white">
+      I've spent 1000+ hours mastering algorithms, data structures, and full-stack development while simultaneously developing 10+ web applications with Ruby on Rails. I've completed 15+ contributions on Github. I've lead a 6-person standups team as a scrum master, assigning teammates with coding challenges from Leet, HackerRank, Repl.it. I've done remote work and collaborated with talented people to create digital products. I'm quietly confident, naturally curious, and perpetually working on improving my problem solving skills.
+    </p>
+  </div>
+
+  <div class="grid-container">
+    <div class="grid-item">
+      <div class="back green-back pad-2">
+        <i class="fas fa-hashtag fa-2x col-green"></i>
+      </div>
+      <div class="col-white type font-normal mt-5">
+        Languages
+      </div>
+      <div class="mt-5">
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Ruby
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          C++
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          HTML
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          CSS
+        </div>
+      </div>
+    </div>
+
+
+    <div class="grid-item">
+      <div class="back blue-back pad-2">
+        <i class="fab fa-accusoft col-blue fa-2x"></i>
+      </div>
+      <div class="col-white type font-normal mt-5">
+        Frameworks
+      </div>
+      <div class="mt-5">
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Ruby on rails
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Bootstrap
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Bulma
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Rspec
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Capybara
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Sqlite3
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Postgresql
+        </div>
+      </div>
+    </div>
+
+
+    <div class="grid-item">
+      <div class="back yellow-back pad-2">
+        <i class="fas fa-lightbulb fa-2x col-yellow"></i>
+      </div>
+      <div class="col-white type font-normal mt-5">
+        Skills
+      </div>
+      <div class="mt-5">
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          GitHub
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Git
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Terminal
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          TDD
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Heroku
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Rubocop
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Mobile/Responsive Development
+        </div>
+      </div>
+    </div>
+    <div class="grid-item">
+      <div class="back red-back pad-2">
+        <i class="fas fa-heart fa-2x col-red "></i>
+      </div>
+      <div class="col-white type font-normal mt-5">
+        Soft skills
+      </div>
+      <div class="mt-5">
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Communication
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Problem-solving
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Remote Pair-Programming
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Agile Methodologies
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Teamwork
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Patience
+        </div>
+        <div class="lang col-gray"> 
+          <i class="fas fa-angle-right mr-3"></i>
+          Adaptability
+        </div>
+      </div>
+    </div>
+
+    <div class="container-1 gray-back">
+      <div>
+        <p class="number-1 col-white m-0 font-normal">05</p>
+        <p class="col-white m-0">interested in collaborating?</p>
+      </div>
+      <h1 class="name-container col-white m-0 font-normal">
+        Get Started
+      </h1>
+      <p class="description font-normal col-white mt-30">
+        if you are interested in collaborating with me you can leave a message for me.  
+      </p>
+
+      <div class="mt-30">
+        <form>
+
+          <div class="black-bg input-pad col-white">
+            <label for="name">Your name</label><br>
+            <input type="text" id="name" name="name"><br>
+          </div>
+
+          <div class="black-bg input-pad col-white mt-5">
+            <label for="email">Your email</label><br>
+            <input type="email" id="email" name="email">
+          </div>
+
+          
+            <textarea class="h-50 black-bg input-pad col-white mt-5" id="w3review" name="w3review" placeholder="Enter your message here..."></textarea>
+     
+
+        </form>
+
+        <button class="btn col-white mt-30">
+          Start collabration
+        </button>
+
+      </div>
+
+    </div>
+  </div>
+
 </body>
 </html>
