--- a/index.html
+++ b/index.html
@@ -287,29 +287,32 @@
 
       <div class="mt-30">
         <form>
-
           <div class="black-bg input-pad col-white">
             <label for="name">Your name</label><br>
             <input type="text" id="name" name="name"><br>
           </div>
-
           <div class="black-bg input-pad col-white mt-5">
             <label for="email">Your email</label><br>
             <input type="email" id="email" name="email">
           </div>
-
-          
             <textarea class="h-50 black-bg input-pad col-white mt-5" id="w3review" name="w3review" placeholder="Enter your message here..."></textarea>
-     
-
         </form>
-
         <button class="btn col-white mt-30">
           Start collabration
         </button>
-
       </div>
-
+      <div class="mt-90">
+        <hr>
+        <div class="mt-30">
+          <a href="https://docs.google.com/document/d/1ZueNoygZ-EMdUV6b7N15lDky7sKJJhdFX4Fe_aQReT8/edit?usp=sharing target="_blank" class="col-red no-decor ">Get my Resume<i class="fas fa-external-link-alt ml-2"></i> </a> 
+        </div>
+        <div class="d-flex pr-5 mt-15">
+          <a href="https://stackoverflow.com/users/14947986/hamayun-waheed" target="_blank" class="col-white"><i class="fab fa-stack-overflow"></i></a>
+          <a href="https://github.com/hamayun-cpu" target="_blank" class="col-white"><i class="fab fa-github"></i></a>
+          <a href="https://twitter.com/hamayun_waheed" target="_blank" class="col-white"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/hamayun-waheed/" target="_blank" class="col-white"><i class="fab fa-linkedin"></i></a>
+        </div>
+      </div>
     </div>
   </div>
 
