--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       <div class="mt-90">
         <hr>
         <div class="mt-30">
-          <a href="https://docs.google.com/document/d/1ZueNoygZ-EMdUV6b7N15lDky7sKJJhdFX4Fe_aQReT8/edit?usp=sharing target="_blank" class="col-red no-decor ">Get my Resume<i class="fas fa-external-link-alt ml-2"></i> </a> 
+          <a href="https://docs.google.com/document/d/1ZueNoygZ-EMdUV6b7N15lDky7sKJJhdFX4Fe_aQReT8/edit?usp=sharing" target = "_blank" class="col-red no-decor font-bold">Get my Resume<i class="fas fa-external-link-alt ml-2 font-bold"></i> </a> 
         </div>
         <div class="d-flex pr-5 mt-15">
           <a href="https://stackoverflow.com/users/14947986/hamayun-waheed" target="_blank" class="col-white"><i class="fab fa-stack-overflow"></i></a>
