make section1 responsive

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <title>Portfolio</title>
 </head>
 <body class= "black-bg m-0">
-  <div class="container-1">
-    <div>
-      <p class="number-1 col-white m-0 font-normal">01</p>
-      <p class="col-white m-0">Hello, I'm</p>
+  <div class="container-1 w-70-lg">
+    <div class="row-sml">
+      <p class="number-1 col-white m-0 font-normal align-end">01</p>
+      <span class="col-white m-0 align-end">Hello, I'm</span>
     </div>
     <h1 class="name-container col-white m-0 font-normal">
       Hamayun
@@ -25,10 +25,10 @@
     <p class="description font-normal col-white">
       A Full Stack Developer with 1+ years of hands-on experience designing, developing, and implementing applications and solutions using a range of technologies and programming languages. Seeking to leverage broad development experience and hands-on technical expertise in a challenging role as a Full-stack Developer. Look through some of my work and experience!
     </p>
-    <div class="d-flex-sm">
-      <span class="col-red font-normal work-line">See my works</span>
+    <div class="d-flex-sm mt-20-lg">
+      <span class="col-red font-normal work-line mt-0-lg">See my works</span>
       <span><hr class="half-hr"></span>
-      <div class="d-flex pr-5 ">
+      <div class="d-flex pr-5 w-m-lg">
         <a href="https://stackoverflow.com/users/14947986/hamayun-waheed" target="_blank" class="col-white"><i class="fab fa-stack-overflow"></i></a>
         <a href="https://github.com/hamayun-cpu" target="_blank" class="col-white"><i class="fab fa-github"></i></a>
         <a href="https://twitter.com/hamayun_waheed" target="_blank" class="col-white"><i class="fab fa-twitter"></i></a>
@@ -37,14 +37,38 @@
     </div>
   </div>
 
-  <div class="container-1 mt-30">
-    <div>
-      <p class="number-1 col-white m-0 font-normal">02</p>
-      <p class="col-white m-0">My Recent works</p>
+  <div class="container-1 mt-30 pl-30">
+    <div class="row-2-sml">
+      <p class="number-1 col-white m-0 font-normal align-end">02</p>
+      <span class="col-white m-0 align-end">My Recent works</span>
     </div>
     <h1 class="name-container col-white m-0 font-normal">
       Portfolio
     </h1>
+  </div>
+
+  <div>
+    <div class="d-none-sm">
+      <div class="h-50-lg"></div>
+      <div class="h-50-lg"></div>
+    </div>
+    
+    
+    <div class="bg-pic-3">
+      <div class = "lin-bg">
+        <p class="col-white m-0 font-normal project-title ">Social Friends</p>
+        <div class="d-flex mt-5 w-80">
+          <div class="tech-box font-normal col-white pad-2">HTML/CSS</div>
+          <div class="tech-box font-normal col-white pad-2">Ruby on Rails</div>
+          <div class="tech-box font-normal col-white pad-2">Bootstrap</div>
+        </div>
+        <div class="see-proj">
+          <a href="./project1.html" class="col-white no-decor">See this Project <i class="fas fa-arrow-right ml-1"></i></a>  
+        </div>
+      </div>
+    </div>
+
+
   </div>
 
   <div class="bg-pic-3">
