make all projects view responsive

--- a/project5.html
+++ b/project5.html
@@ -13,8 +13,11 @@
   <title>Portfolio</title>
 </head>
 <body class= "black-bg m-0">  
-  <div class="d-flex just-cont-end">
+  <div class="d-flex-sml just-cont-end pos-sticky">
     <a href="./index.html" class="col-white mr-5 mt-5"><i class="far fa-times-circle fa-2x"></i></a>
+  </div>
+  <div class="d-flex-ll just-cont-end pos-sticky">
+    <a href="./index.html" class="col-white mr-5 mt-5"><i class="far fa-times-circle fa-3x"></i></a>
   </div>
   <div class="col-white m-auto w-90">
     <div class="title">
@@ -23,16 +26,33 @@
     <div class="d-flex just-cont-sp-btw mt-5 w-90 max-w">
       <div class="tech-box col-white pad-2">HTML/CSS</div>
     </div>
-    <div class="mt-5">
-      <img src="./images/tnw-3.png" class="image-box ">
+
+    <div class="d-flex-lg">
+      <div class="mt-5 w-70">
+        <img src="./images/tnw-3.png" class="image-box ">
+      </div>
+      <div class="pad-5 mt-5 w-30">
+        This project consists of replicating the The Next Web website putting emphasis on how it behaves differently depending on the size of the screen where the website is rendered using only HTML5 and CSS3.
+        <div class="ml-2 mb-10 d-flex-lg mt-20">
+          <a href="https://rawcdn.githack.com/guillainbisimwa/TheNextWebClone/251f7d34ee296df3a6e6e39253e37c60a1620acd/index.html#" target="_blank" class="col-red no-decor ">See live <i class="fas fa-external-link-alt ml-2"></i> </a> <br>
+          <a href="https://github.com/guillainbisimwa/TheNextWebClone" target="_blank" class="col-red no-decor ml-30-lg">See source <i class="fab fa-github ml-2"></i> </a>
+        </div>
+      </div>
     </div>
-    <div class="pad-5 mt-5">
-      This project consists of replicating the The Next Web website putting emphasis on how it behaves differently depending on the size of the screen where the website is rendered using only HTML5 and CSS3.
+
+    <div class="d-flex-lgg just-cont-spa-btw">
+      <div class="low-opac">
+        <a href="./project4.html" class="col-white no-decor"><i class="fas fa-arrow-left mr-3"></i>Previous project</a>
+      </div>
+      <div>
+        05<span class="low-opac"> of 05</span>
+      </div>
+      <div class="low-opac">
+        <a href="#" class="col-white no-decor"><span class="mr-3">Next project</span><i class="fas fa-arrow-right"></i></a>
+      </div>
     </div>
-    <div class="ml-2 mb-10">
-      <a href="https://rawcdn.githack.com/guillainbisimwa/TheNextWebClone/251f7d34ee296df3a6e6e39253e37c60a1620acd/index.html#" target="_blank" class="col-red no-decor ">See live <i class="fas fa-external-link-alt ml-2"></i> </a> <br>
-      <a href="https://github.com/guillainbisimwa/TheNextWebClone" target="_blank" class="col-red no-decor">See source <i class="fab fa-github ml-2"></i> </a>
-    </div>
+
   </div>
 </body>
 </html>
+
