--- a/project2.html
+++ b/project2.html
@@ -13,8 +13,11 @@
   <title>Portfolio</title>
 </head>
 <body class= "black-bg m-0">  
-  <div class="d-flex just-cont-end">
+  <div class="d-flex-sml just-cont-end pos-sticky">
     <a href="./index.html" class="col-white mr-5 mt-5"><i class="far fa-times-circle fa-2x"></i></a>
+  </div>
+  <div class="d-flex-ll just-cont-end pos-sticky">
+    <a href="./index.html" class="col-white mr-5 mt-5"><i class="far fa-times-circle fa-3x"></i></a>
   </div>
   <div class="col-white m-auto w-90">
     <div class="title">
@@ -25,16 +28,33 @@
       <div class="tech-box col-white pad-2">Ruby on Rails</div>
       <div class="tech-box col-white pad-2">Bootstrap</div>
     </div>
-    <div class="mt-5">
-      <img src="./images/co-1.png" class="image-box ">
+
+    <div class="d-flex-lg">
+      <div class="mt-5 w-70">
+        <img src="./images/co-1.png" class="image-box ">
+      </div>
+      <div class="pad-5 mt-5 w-30">
+        This project is a Social-Media-App. In which a user if not SignedIn, can SignIn or SignUp. If User is SignedIn he can create posts. He can also Follow other users. A SignedIn user will have Timeline page where he can see all the posts posted by him and the users he follows. He can also upload a profile picture and cover picture if he wants to.
+        <div class="ml-2 mb-10 d-flex-lg mt-20">
+          <a href="https://fierce-wildwood-74025.herokuapp.com/" target="_blank" class="col-red no-decor ">See live <i class="fas fa-external-link-alt ml-2"></i> </a> <br>
+          <a href="https://github.com/hamayun-cpu/Cricket-Opinions/tree/main" target="_blank" class="col-red no-decor ml-30-lg">See source <i class="fab fa-github ml-2"></i> </a>
+        </div>
+      </div>
     </div>
-    <div class="pad-5 mt-5">
-      This project is a Social-Media-App. In which a user if not SignedIn, can SignIn or SignUp. If User is SignedIn he can create posts. He can also Follow other users. A SignedIn user will have Timeline page where he can see all the posts posted by him and the users he follows. He will also upload a profile picture and cover picture if he wants to.
+
+    <div class="d-flex-lgg just-cont-spa-btw">
+      <div class="low-opac">
+        <a href="./project1.html" class="col-white no-decor"><i class="fas fa-arrow-left mr-3"></i>Previous project</a>
+      </div>
+      <div>
+        02<span class="low-opac"> of 05</span>
+      </div>
+      <div class="low-opac">
+        <a href="./project3.html" class="col-white no-decor"><span class="mr-3">Next project</span><i class="fas fa-arrow-right"></i></a>
+      </div>
     </div>
-    <div class="ml-2 mb-10">
-      <a href="https://fierce-wildwood-74025.herokuapp.com/" target="_blank" class="col-red no-decor ">See live <i class="fas fa-external-link-alt ml-2"></i> </a> <br>
-      <a href="https://github.com/hamayun-cpu/Cricket-Opinions/tree/main" target="_blank" class="col-red no-decor">See source <i class="fab fa-github ml-2"></i> </a>
-    </div>
+
   </div>
 </body>
 </html>
+
