--- a/project4.html
+++ b/project4.html
@@ -13,8 +13,11 @@
   <title>Portfolio</title>
 </head>
 <body class= "black-bg m-0">  
-  <div class="d-flex just-cont-end">
+  <div class="d-flex-sml just-cont-end pos-sticky">
     <a href="./index.html" class="col-white mr-5 mt-5"><i class="far fa-times-circle fa-2x"></i></a>
+  </div>
+  <div class="d-flex-ll just-cont-end pos-sticky">
+    <a href="./index.html" class="col-white mr-5 mt-5"><i class="far fa-times-circle fa-3x"></i></a>
   </div>
   <div class="col-white m-auto w-90">
     <div class="title">
@@ -24,16 +27,33 @@
       <div class="tech-box col-white pad-2">HTML/CSS</div>
       <div class="tech-box col-white pad-2">Bootstrap</div>
     </div>
-    <div class="mt-5">
-      <img src="./images/nw-1.png" class="image-box ">
+
+    <div class="d-flex-lg">
+      <div class="mt-5 w-70">
+        <img src="./images/nw-1.png" class="image-box ">
+      </div>
+      <div class="pad-5 mt-5 w-30">
+        This project consists of building a clone of the News weeks page, to understand the use of css frameworks, in this project i used bootstrap 4 framework for making the front-end of this web-site and i wanted to know how works the frameworks in differents electronic dispositives.
+        <div class="ml-2 mb-10 d-flex-lg mt-20">
+          <a href="https://rawcdn.githack.com/Fanger53/News-Week/5f2bb371db587b51a34f6c1b86a7ff7c9cc2ab4a/index.html" target="_blank" class="col-red no-decor ">See live <i class="fas fa-external-link-alt ml-2"></i> </a> <br>
+          <a href="https://github.com/Fanger53/News-Week" target="_blank" class="col-red no-decor ml-30-lg">See source <i class="fab fa-github ml-2"></i> </a>
+        </div>
+      </div>
     </div>
-    <div class="pad-5 mt-5">
-      This project consists of building a clone of the News weeks page, to understand the use of css frameworks, in this project we use bootstrap 4 framework for making the front-end of this web-site and we wanted to know how works the frameworks in differents electronic dispositives.
+
+    <div class="d-flex-lgg just-cont-spa-btw">
+      <div class="low-opac">
+        <a href="./project3.html" class="col-white no-decor"><i class="fas fa-arrow-left mr-3"></i>Previous project</a>
+      </div>
+      <div>
+        04<span class="low-opac"> of 05</span>
+      </div>
+      <div class="low-opac">
+        <a href="./project5.html" class="col-white no-decor"><span class="mr-3">Next project</span><i class="fas fa-arrow-right"></i></a>
+      </div>
     </div>
-    <div class="ml-2 mb-10">
-      <a href="https://rawcdn.githack.com/Fanger53/News-Week/5f2bb371db587b51a34f6c1b86a7ff7c9cc2ab4a/index.html" target="_blank" class="col-red no-decor ">See live <i class="fas fa-external-link-alt ml-2"></i> </a> <br>
-      <a href="https://github.com/Fanger53/News-Week" target="_blank" class="col-red no-decor">See source <i class="fab fa-github ml-2"></i> </a>
-    </div>
+
   </div>
 </body>
 </html>
+
